🐛: correct scrollbar's rail-x width

--- a/src/directives/scrollbar/scrollbar.pcss
+++ b/src/directives/scrollbar/scrollbar.pcss
@@ -19,6 +19,7 @@
 }
 
 .mu-scrollbar_rail {
+  z-index: 10;
   opacity: 0;
   background: rgba(0, 0, 0, .01);
   transition: opacity .5s ease-in-out;
